<?xml version="1.0"?>
<package format="2">
  <name>controller_package</name>
  <version>1.0.0</version>
  <description>
    Controller.
  </description>
  <maintainer email="robot23@beep.boop">robot23</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>rospy</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>


